# cerberus-os

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEVLOG.md  METRICS.md  README.md  RESEARCH.md  SECURITY.md  build.rs  memory.x  nextest.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: cerberus-ci.yml  docs-site.yml
benchmarks/: Cargo.toml
benchmarks/benches/: scheduler_bench.rs
benchmarks/src/: lib.rs
docs/adr/: 001-no-heap.md  002-custom-panic-handler.md  003-critical-section-implementation.md  004-bitmap-scheduler.md  005-pmp-isolation.md  006-can-ring-buffer.md  007-truncated-hmac.md  008-observable-telemetry.md  009-hardware-performance-benchmarking.md  010-user-mode-pmp-sandboxing.md  011-priority-inheritance-protocol.md  012-task-fault-isolation.md  013-logical-watchdog-monitoring.md  014-arinc653-time-partitioning.md  015-capability-based-access-control.md  016-formal-verification-kani.md  LICENSE
docs/book/: book.toml
docs/book/src/: SUMMARY.md  build-guide.md  devlog.md  fault-injection-and-telemetry.md  metrics.md
docs/book/src/decisions/: 001-no-heap.md  002-custom-panic-handler.md  003-critical-section-implementation.md  004-bitmap-scheduler.md  005-pmp-isolation.md  006-can-ring-buffer.md  007-truncated-hmac.md  008-observable-telemetry.md  009-hardware-performance-benchmarking.md  010-user-mode-pmp-sandboxing.md  011-priority-inheritance-protocol.md  012-task-fault-isolation.md  013-logical-watchdog-monitoring.md  014-arinc653-time-partitioning.md  015-capability-based-access-control.md  016-formal-verification-kani.md  index.md
host/: dashboard.py  telemetry_broker.py
kernel/: Cargo.toml
kernel/src/: main.rs  trap.rs
kernel/src/kernel/: metrics.rs  mod.rs  spinlock.rs
kernel/src/memory/: pmp.rs
network/: Cargo.toml
network/src/: can.rs  lib.rs
renode/: esp32c3.resc  esp32c3.robot
renode-config/: esp32c3.repl  esp32c3.resc  esp32c3.robot
scheduler/: Cargo.toml
scheduler/src/: bitmap.rs  lib.rs  tcb.rs
security/: Cargo.toml
security/src/: bootloader.rs  hmac.rs  hsm.rs  lib.rs
src/: main.rs  trap.rs  trap_entry.s
src/kernel/: metrics.rs  mod.rs
src/memory/: mod.rs  pmp.rs
src/network/: mod.rs
src/scheduler/: bitmap.rs  mod.rs  switch.rs  tcb.rs
src/security/: bootloader.rs  hmac.rs  hsm.rs  mod.rs
telemetry/: Cargo.toml
telemetry/src/: lib.rs  syscalls.rs
