[package]
name = "cerberus-os"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.8"
defmt-rtt = "0.4.1"
riscv = { version = "0.11.1", features = ["critical-section-single-hart"] }
riscv-rt = "0.12.0"

[features]
default = []
host-testing = []

[profile.dev]
opt-level = "z"
debug = true
lto = true
codegen-units = 1

[profile.release]
opt-level = "z"
debug = true
lto = true
codegen-units = 1
