[workspace]
resolver = "2"
members = [
    "kernel",
    "scheduler",
    "security",
    "network",
    "telemetry",
    "benchmarks"
]
default-members = [
    "kernel",
    "scheduler",
    "security",
    "network",
    "telemetry"
]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[profile.dev]
opt-level = "z"
debug = true
lto = true
codegen-units = 1
panic = "abort"

[profile.release]
opt-level = "z"
debug = true
lto = true
codegen-units = 1
panic = "abort"

