[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true


[dependencies]
defmt = "0.3.8"
riscv = { version = "0.11.1", features = ["critical-section-single-hart"] }
riscv-rt = "0.12.0"
sha2 = { version = "0.11.0", default-features = false }
scheduler = { path = "../scheduler" }
security = { path = "../security" }
network = { path = "../network" }
telemetry = { path = "../telemetry" }

[features]
default = []
host-testing = []

[[bin]]
name = "cerberus-os"
path = "src/main.rs"
harness = false
