[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true


[dependencies]
defmt = "1.1.0"
riscv = { version = "0.11.1", features = ["critical-section-single-hart"] }
riscv-rt = "0.12.0"
sha2 = { version = "0.10.8", default-features = false }
scheduler = { path = "../scheduler" }
security = { path = "../security" }
network = { path = "../network" }
telemetry = { path = "../telemetry" }

[features]
default = []
host-testing = []

[[bin]]
name = "cerberus-os"
path = "src/main.rs"
harness = false
